--- a/브라우징라우터와 해시라우터.md
+++ b/브라우징라우터와 해시라우터.md
@@ -1,8 +1,29 @@
-# 브라우징라우터
+# 라우터란?
+~~~
+URL 값에 따라 뷰(View)를 랜더링하여 보여주는 라이브러리
 
+랜더링을 서버측에서 담당하면 자원소모가 있으므로 view는 브라우저(프론트)에서 담당
+브라우저에서 "캐싱과 압축 기능"을 활용하여 필요한 정보가 있으면 서버에서 받아와서 합쳐서 보여줌
+~~~
+~~~java script
+import { BorwserRouter, HashRouter, Link, Route } from 'react-router-dom';
+~~~
+
+# 브라우징라우터
+~~~
+HTML5의 history API를 사용하여 페이지를 업데이트한다.
+주로 동적인 화면에 적절하다
+서버단에서 설정할 경우 검색엔진에서 읽을 수 있다.
+~~~
 
 # 해시라우터
 ~~~
 주로 어느정도 private한 사이트에서 볼 수 있다.
 /#/로 표현되며 해시라우터 뒤의 내용은 서버사이드에서 읽지 못하는 내용이라 검색엔진에서 읽지 못함
+주로 정적인 화면에 적합하다.
+~~~
+
+~~~
+지금까지 자동화테스터, 플랫폼, 세무회계 프로그램 개발에 참여해본 결과 모두 해시라우터를 사용하고 있다.
+그 이유는 URL상에 개인정보나 토큰등의 private한 정보나 검색엔진에서 검색되지 말아야하기 때문이다.
 ~~~
