--- a/실행컨택스트와 콜스택.md
+++ b/실행컨택스트와 콜스택.md
@@ -6,9 +6,10 @@
 ~~~
 <img width="323" alt="스크린샷 2021-10-31 오후 11 26 29" src="https://user-images.githubusercontent.com/36693355/139588312-a42b7209-196e-4682-890a-1d6e4439782f.png">
 
-
+# 콜스택 동작 이해하기
 ~~~javascript
-//자바스크립트는 단일 스레드언어로 아래와 같이 함수를 실행시키면 실행 컨택스트를 콜 스택에 쌓고(push) 결과를 반환하면 제거(pop)합니다.
+// 자바스크립트는 단일 스레드언어로 단일 호출 스택을 가진다. 
+// 아래와 같이 함수를 실행시키면 실행 컨택스트를 콜 스택에 쌓고(push) 결과를 반환하면 제거(pop)합니다.
 function multiply(x, y) {
     return x * y;
 }
@@ -27,11 +28,39 @@ multiply의 리턴 25를 받아서 콜스택에서 제거한다.
 console.log(s) 실행 컨택스트를 행시킨다. 콜스택에서 제거한다.
 printSquare를 콜스택에서 제거한다.
 
-어떤 실행 컨텍스트가 콜 스택의 맨 위에 쌓이는 순간이 곧 현재 실행할 코드에 관여하게 되는 시점이다.
+따라서 어떤 실행 컨텍스트가 콜 스택의 맨 위에 쌓이는 순간이 곧 현재 실행할 코드에 관여하게 되는 시점이다.
 ~~~
 
-### 단일호출스택에 대한 설명(내용추가)
-### https://new93helloworld.tistory.com/358
+# 자바스크립트는 엔진 딸랑 하나가 끝인가?
+![image](https://user-images.githubusercontent.com/36693355/142227055-8ca7d303-d3fb-4cee-863f-54ed63375cdc.png)
+~~~
+웹은 단순히 JS 엔진으로만 구성되어 있지 않다.
+자바스크립트 내부 비동기 함수들이 존재하는데(ex.dom, setTimeout) 이는 WEB API라고 한다.
+이 웹 api에 요청이 들어오면 요청에대한 콜백함수를 콜백 큐(=테스크 큐)에 쌓는다.
+그래서 콜스택이 비어있으면 콜백큐에서 콜스택으로 콜백함수를 하나씩 넣어준다.
+
+정리하면
+콜스택: 처리할 소스와 함수를 하나하나 순차적으로 스택에 담아서 처리하는곳
+웹API: 자바스크립트에서 지원하는 비동기 함수들 DOM AJAX Timeout
+콜백큐: 웹API에서 받은 콜백함수를 저장하는 곳
+이벤트루프: if (callstack is null) callbackQueue.pop() and callstack.push(callbackFunction)
+~~~
+
+# 예제
+~~~javascript
+setTimeout(()=> {console.log("async gayoung")})
+console.log("gayoung")
+~~~
+~~~
+1. 콜스택에 setTimeout를 넣어줌
+2. 콜스택의 setTimeout이 실행되며 그 콜백펑션인 console.log("async gayoung")를 콜백큐에 담아줌 (콜스택에 있는 웹API의 실행은 웹 API에서 함)
+3. 콜스택에 console.log("gayoung") 추가됨
+(이떄 콜스택이 비어있지 않아서 콜백큐에 콜백펑션을 콜스택으로 못보냄)
+4. 콜스택에 console.log("gayoung") 실행됬음
+5. 콜스택이 비어있으니 콜백펑션 console.log("async gayoung") 애를 콜스택에 쌓아서 실행시킴
+~~~
+
+
 
 # 실행 컨택스트
 ~~~
