--- a/실행컨택스트와 콜스택.md
+++ b/실행컨택스트와 콜스택.md
@@ -65,7 +65,8 @@ console.log("gayoung")
 # 실행 컨택스트
 ~~~
 자바스크립트는 콜스택에 실행할 함수들을 모아 문맥(context)을 만든다.
-실행 컨택스트는 (콜스택에 쌓이는 순간에)실행할 코드에 제공할 환경 정보들을 모아놓은 객체이다.
+실행 컨택스트는 (콜스택에 쌓이는 순간에)실행할 코드에 제공할 환경 정보들을 모아놓은 '객체'이다.
+= 콜 스택에 들어있는 객체
 
 
 실행 컨택스트에 담기는 정보
