--- a/실행컨택스트와 콜스택.md
+++ b/실행컨택스트와 콜스택.md
@@ -65,8 +65,7 @@ console.log("gayoung")
 # 실행 컨택스트
 ~~~
 자바스크립트는 콜스택에 실행할 함수들을 모아 문맥(context)을 만든다.
-실행 컨택스트는 (콜스택에 쌓이는 순간에)실행할 코드에 제공할 환경 정보들을 모아놓은 '객체'이다.
-= 콜 스택에 들어있는 객체
+실행 컨택스트는 콜스택 최상단의 실행할 코드에 제공할 환경 정보들을 모아놓은 '객체'이다.
 
 
 실행 컨택스트에 담기는 정보
@@ -82,5 +81,3 @@ ThisBinding: 식별자가 바라봐야 할 대상 객체, 현재 컨텍스트와
 3. this 값을 설정한다.
 ~~~
 
-###실행컨택스트환경정보(내용추가)
-### https://velog.io/@minidoo/%EC%9E%90%EB%B0%94%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%8B%A4%ED%96%89-%EC%BB%A8%ED%85%8D%EC%8A%A4%ED%8A%B8%EB%9E%80-1
